<resources>
    <string name="app_name">MyMovies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


        <string name="profile_hint">Profile</string>
        <string name="name_hint">Name</string>
        <string name="email_hint">Email</string>
        <string name="phone_hint">Phone</string>
    <string name="username_hint">Username</string>

    <string name="save_button">Save</string>


</resources>